Fixed the Nav Bar on smaller devices
The navigation Bar was transparent due to an old Idea I had, but it was scraped, and I changed the background to black instead.

--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ nav ul li a:focus::before {
         top: 0;
         left: 0;
         width: 100vw;
-        background: transparent;
+        background: black;
         z-index: 2000;
         display: flex;
         align-items: center;
